--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #13352c;
+  min-height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,4 +30,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+}
+
+nav li{
+  display: inline;
+  padding: 0px 20px;
+  font-size: 20px;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.blog-post {
+  border: solid black;
+  padding: 20px;
+  margin: 10px 0px;
+  min-width: 80vw;
 }
