--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ ul {
   height: 100%;
   width: 30%;
   border: 1px solid black;
+  margin: 5px;
 }
 .main-right {
   height: 100%;
@@ -70,10 +71,20 @@ ul {
   height: 30vh;
   border: 1px solid black;
   margin: 5px;
+  display: flex;
 }
 .project-even {
   width: 100%;
   height: 30vh;
   border: 1px solid black;
   margin: 5px;
+  display: flex;
+}
+.proj-content-left {
+  width: 70%;
+  height: 100%;
+}
+.proj-content-right {
+  width: 30%;
+  height: 100%;
 }
