--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ h2 {
 }
 
 #goat-contain {
-  background-image: url('https://media.istockphoto.com/photos/animal-photos-picture-id834732994?k=6&m=834732994&s=612x612&w=0&h=06pjJwtABcoSl5U9jBhciMb2wX9kaqEV64Qkdbs7XNI=');
+  background-image: url('images/mygoat.jpg');
   min-height: 30vh;
   background-size: cover;
   background-repeat: no-repeat;
