--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,18 @@
   }
 }
 
-
 nav {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  transition: top 0.6s;
+  z-index: 1;
+  background-color: rgb(254, 254, 254);
+}
+
+nav--hidden {
+  top: -50px;
 }
 
 nav li{
