--- a/src/App.css
+++ b/src/App.css
@@ -41,12 +41,12 @@
 
 nav {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   position: fixed;
   top: 0;
   transition: top 0.6s;
   z-index: 1;
-  background-color: rgb(254, 254, 254);
+  background-color: rgb(39, 46, 67);
 }
 
 nav--hidden {
@@ -61,6 +61,9 @@ nav li{
 
 nav a {
   text-decoration: none;
+  color: white;
+  padding: 0 15px;
+  font-size: 22px;
 }
 
 main {
