--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ nav {
   top: 0;
   transition: top 0.6s;
   z-index: 1;
-  background-color: rgb(39, 46, 67);
+  background-color: rgba(39, 46, 67, 0.927);
 }
 
 nav--hidden {
