--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@
 
 .App-header {
   background-image:
-  linear-gradient(to bottom right, #FF0866 50%, #E88605 50%);
-
+  linear-gradient(to bottom right, #FF0866 50%, rgb(249, 234, 234) 50%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,10 +21,20 @@
 }
 
 .header-text {
-  border: 13px solid #33FFDA;
-  padding: 30px;
+  height: 80vh;
+  width: 100vw;
 }
 
+.my-name {
+  position: relative;
+  right: 100px;
+  top: 180px;
+}
+.my-title {
+  position: relative;
+  right: 150px;
+  top: 160px;
+}
 .App-link {
   color: #61dafb;
 }
@@ -45,17 +54,21 @@ nav {
   top: 0;
   transition: top 0.6s;
   z-index: 1;
-  background-color: rgba(39, 46, 67, 0.927);
+  background-color: rgba(47, 61, 103, 0.927);
 }
 
-nav--hidden {
+.navbar--hidden {
   top: -50px;
 }
 
 nav li{
   display: inline;
-  padding: 0px 20px;
+  padding: 0px 30px;
   font-size: 20px;
+}
+
+nav li:hover{
+  color:#33FFDA;
 }
 
 nav a {
@@ -73,8 +86,8 @@ ul {
   list-style-type: none;
 }
 .main-background {
-  background-image: linear-gradient(#E88605, #FF0866);
-  color: white;
+  background-color:rgb(249, 234, 234);
+  color: black;
   transition:all 0.3s ease;
 }
 
@@ -96,6 +109,8 @@ h3 {
   min-height: 30vh;
   text-align: left;
   justify-content: space-around;
+  background-color: rgba(39, 46, 67, 1);
+  color: white;
 }
 
 .profile {
@@ -106,7 +121,7 @@ h3 {
 
 .profile-pic {
   background-image: url('images/profile-pic.jpg');
-  height: 45vh;
+  height: 40vh;
   width: 20vw;
   position: absolute;
   background-size: cover;
@@ -118,9 +133,8 @@ h3 {
 
 .about-text {
   max-width: 50vw;
-  border: 13px solid #FF0866;
+  border: 10px solid #33FFDA;
   padding: 10px;
- 
 }
 
 .skills {
@@ -140,7 +154,7 @@ h3 {
 }
 
 .projects-title {
-  border: 13px solid #33FFDA;
+  border: 13px solid #FF0866;
   width: 20vw;
   margin: 0 auto;
 }
