--- a/src/App.css
+++ b/src/App.css
@@ -156,23 +156,27 @@ h3 {
 .projects-title {
   border: 13px solid #FF0866;
   width: 20vw;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .single-project {
   min-width: 20vw;
   max-width: 20vw;
-  padding: 20px;
+  padding: 0 20px;
+  margin: 20px 10px;
   text-align: left;
-}
-
-.fade {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
   opacity: 1;
   transition:all 0.3s ease;
 }
 
-.fade:hover {
+.fade {
+ 
+}
+
+.single-project:hover {
   transition:all 0.5s ease;
-  opacity: 0.7;
+  opacity: 0.9;
   -webkit-transform: scale(0.9);
   -ms-transform: scale(0.9);
   transform: scale(0.9);
