--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,10 @@ h3 {
   justify-content: space-evenly;
 }
 
+.skill-list {
+  transition:all 1s ease;
+}
+
 .projects-container {
   text-align: center;
 }
@@ -157,7 +161,7 @@ h3 {
 .projects-title {
   border: 13px solid #FF0866;
   width: 20vw;
-  margin: 20px auto;
+  margin: 60px auto;
 }
 .single-project {
   min-width: 20vw;
@@ -166,7 +170,6 @@ h3 {
   margin: 20px 10px;
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
   opacity: 1;
   transition:all 0.3s ease;
   background-color: white;
@@ -209,5 +212,4 @@ h3 {
   margin: 0 10px 0 0;
   box-shadow: 5px 8px rgb(53, 8, 8);
 }
-
 
