added goat vid to project1

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,24 @@
   color: white;
 }
 
+.bg-video {
+  text-align: center;
+  position: relative;
+  height: 30vh;
+  width: 100%;
+  border-radius: 5px;
+  margin: 0 10px 0 0;
+  box-shadow: 5px 8px rgb(53, 8, 8);
+}
+
+.bg-video__content {
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: auto;
+  width: 100%;
+}
+
 .header-text {
   height: 80vh;
   width: 100vw;
