--- a/src/App.css
+++ b/src/App.css
@@ -28,13 +28,14 @@
   border-radius: 5px;
   margin: 0 10px 0 0;
   box-shadow: 5px 8px rgb(53, 8, 8);
+  border: 1px solid black;
 }
 
 .bg-video__content {
-  z-index: 1;
+  z-index: -1;
   left: 0;
   top: 0;
-  height: auto;
+  height: 100%;
   width: 100%;
 }
 
