--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,15 @@
     margin: 120px auto;
     text-align: center;
   }
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .single-project {
+    min-width: 70%;
+  }
+  
 }
 
 .bg-video {
@@ -68,6 +77,7 @@
   height: 80vh;
   width: 100vw;
   position: absolute;
+  
 }
 
 .my-name {
@@ -236,7 +246,7 @@ button {
   padding: 0 20px;
   margin: 20px 10px;
   text-align: left;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
   opacity: 1;
   transition:all 0.3s ease;
   background-color: white;
