--- a/src/App.css
+++ b/src/App.css
@@ -319,4 +319,15 @@ button {
   #resume2 {
     display: block;
   }
+  .single-project {
+    min-width: 45vw;
+    max-width: 45vw;
+    padding: 0 20px;
+    margin: 20px 10px;
+    text-align: left;
+    box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
+    opacity: 1;
+    transition:all 0.3s ease;
+    background-color: white;
+  }
 }
