--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,11 @@ nav {
   top: -50px;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
 nav li{
   display: inline;
   padding: 0px 30px;
