--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ button {
 .profile-pic {
   background-image: url('images/profile-pic.jpg');
   height: 45vh;
-  width: 25vw;
+  width: 20vw;
   background-position: 50% 20%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -201,7 +201,10 @@ button {
 .skills {
   display: flex;
   justify-content: space-evenly;
-  position: relative;
+}
+
+.skill-child {
+  overflow: auto;
 }
 
 .skills-title {
@@ -286,6 +289,12 @@ button {
   margin: 0 10px 0 0;
   box-shadow: 5px 8px rgb(53, 8, 8);
 }
+
+@media only screen and (max-width: 1200px){
+  .skills {
+    flex-direction: column;
+  }
+}
 @media only screen and (max-width: 800px){
   .navbar {
     flex-direction: row;
@@ -295,6 +304,13 @@ button {
     display: inline;
     padding: 0px 5px;
     font-size: 15px;
+  }
+
+  .profile-pic {
+    min-width: 35vw;
+  }
+  .skills-title {
+    justify-content: column;
   }
 }
 
@@ -320,6 +336,7 @@ button {
   .skills {
     display: flex;
     flex-direction: column;
+    position: relative;
     align-items: center;
   }
   .about-text {
