--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 nav {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   top: 0;
   transition: top 0.6s;
@@ -32,6 +32,7 @@ nav li{
   display: inline;
   padding: 0px 30px;
   font-size: 20px;
+  text-shadow: 1px 2px black;
 }
 
 nav li:hover{
@@ -48,6 +49,7 @@ nav a {
   background-image:
   linear-gradient(to bottom right, #FF0866 50%, rgb(249, 234, 234) 50%);
   min-height: 100vh;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,7 +80,7 @@ nav a {
 
 .header-text {
   height: 80vh;
-  width: 100vw;
+  width: 100%;
   position: absolute;
   
 }
@@ -152,14 +154,16 @@ button {
 .about {
   padding: 100px 0px;
   display: flex;
-  min-width: 100vw;
+  min-width: 100%;
+  max-width: 100%;
   min-height: 50vh;
   text-align: left;
   justify-content: space-around;
+  text-shadow: 1px 1px black;
 }
 
 .profile {
-  max-width: 50vw;
+  max-width: 50%;
   height: 60vh;
   display: flex;
   flex-direction: column;
@@ -194,7 +198,7 @@ button {
   border: 1px solid white;
 }
 .about-text {
-  max-width: 50vw;
+  max-width: 50%;
   padding: 30px;
 }
 
@@ -224,25 +228,24 @@ button {
 .projects-container {
   background-color: rgb(249, 234, 234);
   text-align: center;
-  min-width: 100vw;
+  width: 100%;
 }
 
 .projects {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  min-width: 100vw;
+  width: 100%;
   justify-content: space-around;
 }
 
 .projects-title {
-  width: 20vw;
+  width: 20%;
   margin: auto;
   color: black;
 }
 .single-project {
-  min-width: 20vw;
-  max-width: 20vw;
+  width: 20%;
   padding: 0 20px;
   margin: 20px 10px;
   text-align: left;
