--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,10 @@ nav a {
 .page-links li{
   padding: 0px 20px;
 }
+
+.nav-links li {
+  padding: 0px 20px;
+}
 .App-header {
   background-image:
   linear-gradient(to bottom right, #FF0866 50%, rgb(249, 234, 234) 50%);
@@ -307,10 +311,7 @@ button {
     max-height: 35vh;
     min-height: 35vh;
   }
-  .nav-links li{
-    
-    padding: 0px 0px;
-  }
+ 
 }
 
 
@@ -318,6 +319,9 @@ button {
  .page-links li {
    padding: 0px;
  }
+ .nav-links li{
+  padding: 0px 0px;
+  }
   .my-title {
     top: 45%;
   }
@@ -333,8 +337,8 @@ button {
   }
 
   .profile-pic {
-    height: 45vh;
-    min-width: 50vw;
+    min-height: 45vh;
+    min-width: 45vw;
     background-position: 80% 80%;
     background-repeat: no-repeat;
     background-size: cover;
